# Main

.gitbackup/: COMMIT_EDITMSG  config  index
.gitbackup/logs/refs/heads/: master
.gitbackup/objects/pack/: tmp_pack_MUNm9J
.gitbackup/refs/heads/: master
EXAM/studentsource2025/: connmgr.c  connmgr.h  datamgr.c  datamgr.h  main.c  sbuffer.c  sbuffer.h  sensor_db.c  sensor_db.h  storemgr.c  storemgr.h
EXAM/studentsource2025/lib/: dplist.c
Mile2/: CMakeLists.txt
Mile2/startcodeplab2/ex1/: main.c  sensor_db.c  sensor_db.csv  sensor_db.h
Mile2/startcodeplab2/ex2/: main.c  makeFile
Mile2/startcodeplab2/milestone2/: logger.c  sensor_db.c  sensor_db.csv
Mile3/: CMakeLists.txt
Mile3/startcodeplab4/: Makefile  main.c  sbuffer.c  sbuffer.h  sensor_csv
hm2/: Makefile  hello  hellofunc.c  hellofunc.h  hellomain.c
lab1/: Makefile  ex2  ex2.c  ex3  ex3.c  main.c
lab2/: Makefile  ex1.c  ex2.c  ex3.c
lab3/: CMakeLists.txt
lab3/startcodeclab3/ex1/: Makefile  dplist.c
lab3/startcodeclab3/ex2/: Makefile  dplist.c  program.c
lab3/startcodeclab3/milestone1/: Makefile  dplist.c  ourtest.c
lab4/: CMakeLists.txt
lab4/startcodeplab1/: Makefile  config.h  datamgr.c  main.c  sensor_data  sensor_data_text
lab5/: CMakeLists.txt
lab5/startcodeplab3/: sensor_node  test_server  test_server.c
